#===------------------------------------------------------------------------===#
#
#                     The KLEE Symbolic Virtual Machine
#
# This file is distributed under the University of Illinois Open Source
# License. See LICENSE.TXT for details.
#
#===------------------------------------------------------------------------===#
add_subdirectory(Basic)
add_subdirectory(Support)
add_subdirectory(Expr)
add_subdirectory(Solver)
add_subdirectory(Module)
add_subdirectory(Core)
